maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:26: error: method dirFree has return statement; needs result type
        return false
        ^PledgeMaze:29: error: method dirFree has return statement; needs result type
        return true
        ^